// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/RuleKnowledge render markdown with custom code block 1`] = `
<body>
  <div>
    <div
      class="css-bwb9yf"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          知识库
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span>
              编 辑
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1ie1bey"
      >
        <div
          class="ant-card ant-card-bordered rule-knowledge-info-card"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 8px;"
                  >
                    <h4
                      class="ant-typography"
                    >
                      绑定的变量个数不建议超过阈值
                    </h4>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-typography-secondary"
                    >
                      因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1yb442y"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="markdown-container"
              >
                <div
                  class="full-width-element"
                  data-color-mode="light"
                >
                  <div
                    class="css-1pkzawh"
                    components="[object Object]"
                    rehypeplugins="() => jest.fn()"
                  >
                    
  ## 标签
  \`\`\`label [数据库版本:MySQL 5.7.25,检查方式:不连库审核]\`\`\`
  ### 示例
  \`\`\`sql
  select * from customers where name is not null;        
  \`\`\`
  ### SQL Diff
  \`\`\`sql_diff
    ---before
      SELECT * FROM Users
      WHERE id &gt; 0 
      AND status = 'active'
    ---after
      SELECT id, name 
      FROM Users
      WHERE id &gt; 0 
      AND status = 'active'
  \`\`\`

                  </div>
                </div>
                <h2
                  class="ant-typography graph-title"
                  id="header-0"
                >
                  关联的语法节点
                </h2>
                <div
                  class="css-1c94q4z"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning ant-spin-show-text"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                        <div
                          class="ant-spin-text"
                        >
                          加载知识图谱中...
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class=""
                >
                  <div
                    class="ant-anchor-wrapper"
                    style="max-height: 100vh;"
                  >
                    <div
                      class="ant-anchor"
                    >
                      <span
                        class="ant-anchor-ink ant-anchor-ink-visible"
                        style="top: 0px; height: 0px;"
                      />
                      <div
                        class="ant-anchor-link ant-anchor-link-active"
                      >
                        <a
                          class="ant-anchor-link-title ant-anchor-link-title-active"
                          href="#header-0"
                          title="关联的语法节点"
                        >
                          关联的语法节点
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/RuleKnowledge request rule info and custom rule knowledge 1`] = `
<body>
  <div>
    <div
      class="css-bwb9yf"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          知识库
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span>
              编 辑
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1ie1bey"
      >
        <div
          class="ant-card ant-card-bordered rule-knowledge-info-card"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 8px;"
                  >
                    <h4
                      class="ant-typography"
                    >
                      绑定的变量个数不建议超过阈值
                    </h4>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-typography-secondary"
                    >
                      因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1yb442y"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="markdown-container"
              >
                <div
                  class="full-width-element"
                  data-color-mode="light"
                >
                  <div
                    class="css-1pkzawh"
                    components="[object Object]"
                    rehypeplugins="() => jest.fn()"
                  >
                    123
                  </div>
                </div>
                <h2
                  class="ant-typography graph-title"
                  id="header-0"
                >
                  关联的语法节点
                </h2>
                <div
                  class="css-1c94q4z"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning ant-spin-show-text"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                        <div
                          class="ant-spin-text"
                        >
                          加载知识图谱中...
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class=""
                >
                  <div
                    class="ant-anchor-wrapper"
                    style="max-height: 100vh;"
                  >
                    <div
                      class="ant-anchor"
                    >
                      <span
                        class="ant-anchor-ink ant-anchor-ink-visible"
                        style="top: 0px; height: 0px;"
                      />
                      <div
                        class="ant-anchor-link ant-anchor-link-active"
                      >
                        <a
                          class="ant-anchor-link-title ant-anchor-link-title-active"
                          href="#header-0"
                          title="关联的语法节点"
                        >
                          关联的语法节点
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/RuleKnowledge request rule info and not custom rule knowledge 1`] = `
<body>
  <div>
    <div
      class="css-bwb9yf"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          知识库
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span>
              编 辑
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1ie1bey"
      >
        <div
          class="ant-card ant-card-bordered rule-knowledge-info-card"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 8px;"
                  >
                    <h4
                      class="ant-typography"
                    >
                      绑定的变量个数不建议超过阈值
                    </h4>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-typography-secondary"
                    >
                      因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1yb442y"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="markdown-container"
              >
                <div
                  class="full-width-element"
                  data-color-mode="light"
                >
                  <div
                    class="css-1pkzawh"
                    components="[object Object]"
                    rehypeplugins="() => jest.fn()"
                  >
                    123
                  </div>
                </div>
                <h2
                  class="ant-typography graph-title"
                  id="header-0"
                >
                  关联的语法节点
                </h2>
                <div
                  class="css-1c94q4z"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning ant-spin-show-text"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                        <div
                          class="ant-spin-text"
                        >
                          加载知识图谱中...
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class=""
                >
                  <div
                    class="ant-anchor-wrapper"
                    style="max-height: 100vh;"
                  >
                    <div
                      class="ant-anchor"
                    >
                      <span
                        class="ant-anchor-ink ant-anchor-ink-visible"
                        style="top: 0px; height: 0px;"
                      />
                      <div
                        class="ant-anchor-link ant-anchor-link-active"
                      >
                        <a
                          class="ant-anchor-link-title ant-anchor-link-title-active"
                          href="#header-0"
                          title="关联的语法节点"
                        >
                          关联的语法节点
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/RuleKnowledge update rule knowledge and refresh 1`] = `
<body>
  <div>
    <div
      class="css-bwb9yf"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          知识库
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span>
              编 辑
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1ie1bey"
      >
        <div
          class="ant-card ant-card-bordered rule-knowledge-info-card"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 8px;"
                  >
                    <h4
                      class="ant-typography"
                    >
                      绑定的变量个数不建议超过阈值
                    </h4>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-typography-secondary"
                    >
                      因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1yb442y"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="markdown-container"
              >
                <div
                  class="full-width-element"
                  data-color-mode="light"
                >
                  <div
                    class="css-1pkzawh"
                    components="[object Object]"
                    rehypeplugins="() => jest.fn()"
                  >
                    123
                  </div>
                </div>
                <h2
                  class="ant-typography graph-title"
                  id="header-0"
                >
                  关联的语法节点
                </h2>
                <div
                  class="css-1c94q4z"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning ant-spin-show-text"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                        <div
                          class="ant-spin-text"
                        >
                          加载知识图谱中...
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class=""
                >
                  <div
                    class="ant-anchor-wrapper"
                    style="max-height: 100vh;"
                  >
                    <div
                      class="ant-anchor"
                    >
                      <span
                        class="ant-anchor-ink ant-anchor-ink-visible"
                        style="top: 0px; height: 0px;"
                      />
                      <div
                        class="ant-anchor-link ant-anchor-link-active"
                      >
                        <a
                          class="ant-anchor-link-title ant-anchor-link-title-active"
                          href="#header-0"
                          title="关联的语法节点"
                        >
                          关联的语法节点
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
